resources/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: lunchbot
    app.kubernetes.io/component: lunchbot
    app.kubernetes.io/instance: lunchbot
  name: lunchbot
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: lunchbot
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: lunchbot
    spec:
      containers:
      - env:
        - name: TOKEN
          value: OAUTH_TOKEN
        image: image-registry.openshift-image-registry.svc:5000/bparees/lunchbot@sha256:a0d2bc5921154f87b991f206f6fdfdbca0d9e55c88c2c7a76dffe6997c9bbd14
        imagePullPolicy: Always
        name: lunchbot
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - lunchbot
      from:
        kind: ImageStreamTag
        name: lunchbot:latest
        namespace: bparees
    type: ImageChange
