resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lunchbot
    app.kubernetes.io/component: lunchbot
    app.kubernetes.io/instance: lunchbot
  name: lunchbot
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: lunchbot
  sessionAffinity: None
  type: ClusterIP
